# lilac

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: doxygen.yml
cmake/: UseClang.cmake  UseLLVM.cmake
docs/: GettingStarted.md  GettingStartedCppCsharp.md  INFRASTRUCTURE.md  InterfaceModel.pu  README.md  process.pu
ild/: CMakeLists.txt  pch.h
ild/src/: main.cxx
langs/: CMakeLists.txt
langs/csharp/: CMakeLists.txt
langs/csharp/backend/: CMakeLists.txt  interfacevisitor.h  module.h  pch.h
langs/csharp/backend/include/csharp/: module.h
langs/csharp/backend/src/: interfacevisitor.cxx  module.cxx
langs/csharp/frontend/: CMakeLists.txt  Lilac.sln
langs/csharp/frontend/src/Lilac.Generator/: ExportAttributeGenerator.cs  FileEmitter.cs  Lilac.Generator.csproj  ParameterPack.cs  TypeHelper.cs
langs/csharp/frontend/src/Lilac.Generator.Diagnostics/: DiagnosticGenerator.cs  Lilac.Generator.Diagnostics.csproj
langs/csharp/frontend/src/Lilac.Generator.Diagnostics/Properties/: launchSettings.json
langs/csharp/frontend/src/Lilac.Generator/Exporters/: EnumExporter.cs  IExporter.cs  MethodExporter.cs  TypeExporter.cs
langs/csharp/frontend/src/Lilac.Generator/Properties/: Diagnostics.csv  launchSettings.json
langs/csharp/frontend/src/Lilac.Test/: CSModule.cs  Lilac.Test.csproj
langs/csharp/frontend/src/Lilac.Test/Properties/: lilac.config.json
langs/cxx/frontend/: CMakeLists.txt  astvisitor.h  codegen.h  context.h  declserializer.h  exportattr.h  pch.h  pluginaction.h  typemap.h
langs/cxx/frontend/src/: astvisitor.cxx  codegen.cxx  declserializer.cxx  exportattr.cxx  main.cxx  pluginaction.cxx
langs/msil/backend/: pch.h  version.h.in
langs/msil/backend/src/: main.cxx
langs/shared/: CMakeLists.txt  hierarchy.h
langs/shared/backend/: CMakeLists.txt
langs/shared/backend/shared/: backend.h
langs/shared/include/shared/: InterfaceVisitor.h  backend.h  char.h  exception.h  frontend.h  interfacevisitor.h
langs/shared/shared/: backend.h  version.h
langs/shared/src/: InterfaceVisitor.cxx  backend.cxx  char.cxx  exception.cxx  frontend.cxx  hierarchy.cxx  interfacevisitor.cxx  transcompiler.cxx
lilac/: CMakeLists.txt  compilesymbolsubcommand.h  generatesubcommand.h  lilac.h  lilac.h.in  pch.h  subcommand.h  utils.h
lilac-c/: CMakeLists.txt
lilac-c/inc/: astconsumer.h  astfrontendaction.h  astvisitor.h  enumvisitor.h  frontendactionfactory.h  recordvisitor.h  visitorbase.h
lilac-c/src/: astconsumer.cxx  astfrontendaction.cxx  astvisitor.cxx  enumvisitor.cxx  frontendactionfactory.cxx  main.cxx  recordvisitor.cxx
lilac-c/test/: CMakeLists.txt  main.cxx
lilac-core/: CMakeLists.txt  hierarchy.h  irreader.h  transcompiler.h
lilac-core/src/: hierarchy.cxx  irreader.cxx
lilac-cxx/: CMakeLists.txt  cxxrecordvisitor.h  declserializer.h  enumvisitor.h  exportattr.h  functionvisitor.h  pch.h  visitor.h
lilac-cxx/src/: cxxrecordvisitor.cxx  declserializer.cxx  enumvisitor.cxx  exportattr.cxx  functionvisitor.cxx  main.cxx  visitor.cxx
lilac-llvm/: CMakeLists.txt
lilac-llvm/src/: main.cxx
lilac-msil/: CMakeLists.txt
lilac-msil/src/: main.cxx
lilac-nm/: CMakeLists.txt  pch.h
lilac-nm/src/: main.cxx
lilac/inc/: complextype.h  declmap.h  enumtype.h  kinds.h  memorystream.h  method.h  refs.h  type.h  typedecl.h
lilac/src/: compilesymbolsubcommand.cxx  complextype.cxx  declmap.cxx  enumtype.cxx  generatesubcommand.cxx  main.cxx  memorystream.cxx  method.cxx  refs.cxx  subcommand.cxx  type.cxx  typedecl.cxx
samples/getting-started/: .gitignore  CMakeLists.txt  MyConsole.sln
samples/getting-started/MyConsole/: MyConsole.csproj  Program.cs
samples/getting-started/cxx/: test.cxx
schemas/: symbol.xsd
